Исправлен Dockerfile Добавлена установка утилиты make

--- a/lab4/Dockerfile
+++ b/lab4/Dockerfile
@@ -1,6 +1,9 @@
 FROM ubuntu
 
-COPY [ "./src", "lab4.sh", "/" ]
+COPY ./src /src
+COPY lab4.sh /
+
+RUN apt update && apt install make && chmod 755 /lab4.sh
 
 WORKDIR /src
 
