--- a/lab4/Dockerfile
+++ b/lab4/Dockerfile
@@ -3,7 +3,8 @@ FROM ubuntu
 COPY ./src/ /src/
 COPY lab4.sh /
 
-RUN apt update && apt install make && chmod 755 /lab4.sh
+RUN mkdir /src/bin && chmod 755 /lab4.sh
+RUN apt update && apt install make
 
 WORKDIR /src
 
