--- a/lab4/Dockerfile
+++ b/lab4/Dockerfile
@@ -4,7 +4,7 @@ COPY ./src/ /src/
 COPY lab4.sh /
 
 RUN mkdir /src/bin && chmod 755 /lab4.sh
-RUN apt update && apt install make gcc
+RUN apt update && apt install -y make gcc
 
 WORKDIR /src
 
